--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     - name: generate
       run: |
             docker run --rm dockcross/windows-shared-x86 > ./xcross; chmod +x ./xcross; sudo mv ./xcross /usr/bin/
-            xcross bash -c "conan install --build=missing -- .. && gcc -o testcurl testcurl.c -static"
+            xcross bash -c "conan install .. --build libcurl && gcc -o testcurl testcurl.c -static"
             ls -la
             
     - name: Publish artefacts
