--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     - name: generate
       run: |
             docker run --rm dockcross/windows-shared-x86 > ./xcross; chmod +x ./xcross; sudo mv ./xcross /usr/bin/
-            xcross bash -c "mkdir build && cd build && conan install --build -- .. && cmake .. -DCMAKE_BUILD_TYPE=Release && cmake --build ."
+            xcross bash -c "mkdir build && cd build && conan install .. && cmake .. -DCMAKE_BUILD_TYPE=Release && cmake --build ."
             ls -la
             
     - name: Publish artefacts
