--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     - name: generate
       run: |
             docker run --rm dockcross/windows-shared-x86 > ./xcross; chmod +x ./xcross; sudo mv ./xcross /usr/bin/
-            xcross bash -c "export PATH=/usr/src/mxe/usr/bin/i686-w64-mingw32.shared-gcc:$PATH  mkdir build && cd build && conan install .. --build libcurl && cmake .. -DCMAKE_BUILD_TYPE=Release && cmake --build ."
+            xcross bash -c "export PATH=/usr/src/mxe/usr/bin/i686-w64-mingw32.shared-gcc:$PATH && mkdir build && cd build && conan install .. --build libcurl && cmake .. -DCMAKE_BUILD_TYPE=Release && cmake --build ."
             ls -la
             
     - name: Publish artefacts
