--- a/.github/workflows/mainvs.yml
+++ b/.github/workflows/mainvs.yml
@@ -56,7 +56,7 @@ jobs:
             cd build
             "C:\Program Files\Conan\conan\conan.exe" install .. --build libcurl
             cmake -G "Visual Studio 16 2019" -A Win32 -DCMAKE_VERBOSE_MAKEFILE=true -DCMAKE_CONFIGURATION_TYPES=Release ..
-            msbuild.exe dockcross-conan-test1.vcxproj /p:Configuration=Release /p:AdditionalIncludePaths=%CONAN_INCLUDE_DIRS_LIBCURL%
+            msbuild.exe dockcross-conan-test1.sln /p:Configuration=Release /p:AdditionalIncludePaths=%CONAN_INCLUDE_DIRS_LIBCURL%
             echo %CONAN_LIB_DIRS%
             7z a dockcross-conan-test1.zip D:/a/dockcross-conan-test1/
         shell: cmd
