--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
-project(myapp)
+project(dockcross-conan-test1)
 cmake_minimum_required(VERSION 3.1)
 
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup(TARGETS)
 
-add_executable(myapp testcurl.c)
-target_link_libraries(myapp CONAN_PKG::libcurl)
+add_executable(dockcross-conan-test1 testcurl.c)
+target_link_libraries(dockcross-conan-test1 CONAN_PKG::libcurl)
